Fix: bullets not showing on the timeslider page

--- a/etherpad/src/static/css/pad2_ejs.css
+++ b/etherpad/src/static/css/pad2_ejs.css
@@ -1137,3 +1137,24 @@ a.topbarmaximize {
  padding-right: 0;
  width: 100%;
 }
+
+#editorcontainerbox ul { margin-left: 1.5em; }
+#editorcontainerbox ul ul { margin-left: 0 !important; }
+#editorcontainerbox ul.list-bullet1 { margin-left: 1.5em; }
+#editorcontainerbox ul.list-bullet2 { margin-left: 3em; }
+#editorcontainerbox ul.list-bullet3 { margin-left: 4.5em; }
+#editorcontainerbox ul.list-bullet4 { margin-left: 6em; }
+#editorcontainerbox ul.list-bullet5 { margin-left: 7.5em; }
+#editorcontainerbox ul.list-bullet6 { margin-left: 9em; }
+#editorcontainerbox ul.list-bullet7 { margin-left: 10.5em; }
+#editorcontainerbox ul.list-bullet8 { margin-left: 12em; }
+
+#editorcontainerbox ul { list-style-type: disc; }
+#editorcontainerbox ul.list-bullet1 { list-style-type: disc; }
+#editorcontainerbox ul.list-bullet2 { list-style-type: circle; }
+#editorcontainerbox ul.list-bullet3 { list-style-type: square; }
+#editorcontainerbox ul.list-bullet4 { list-style-type: disc; }
+#editorcontainerbox ul.list-bullet5 { list-style-type: circle; }
+#editorcontainerbox ul.list-bullet6 { list-style-type: square; }
+#editorcontainerbox ul.list-bullet7 { list-style-type: disc; }
+#editorcontainerbox ul.list-bullet8 { list-style-type: circle; }
